--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">WeatherNewsApplication</string>
+
+    <string name="main_weather_title">天気・ニュースアプリ</string>
+    <string name="main_weather_area_title">地域</string>
+    <string name="main_weather_today_title">今日</string>
+    <string name="main_weather_tomorrow_title">明日</string>
+
+    <string name="main_weather_area">函館市</string>
+    <string name="main_weather_today_temperature">10.0°\n11.0°/5.0°</string>
+    <string name="main_weather_tomorrow_temperature">12.0°\n15.0°/10.0°</string>
+    <string name="reload_image_button_description">リロード</string>
 </resources>
